# pg_notify_dml

./: .gitignore  .pre-commit-config.yaml  LICENSE.txt  README.md  docker-compose.yaml  pyproject.toml
.github/workflows/: python.yaml
docs/: development.md
legacy/: Makefile  README.md
legacy/services/notifier/: pyproject.toml
legacy/services/notifier/src/notifier/: main.py  web.py
legacy/services/postgres/docker-entrypoint-initdb.d/: 01-notify-event.sql  02-create-table.sql
services/notifier/: Dockerfile
services/notifier/src/notifier/: main.py  web.py
services/postgres/docker-entrypoint-initdb.d/: 03-hook-trigger-to-table-dml.sql
src/pg_notify_dml/: __about__.py  __main__.py  cli.py  triggers.py
tests/: __init__.py  test_cli.py  test_triggers.py
