[tool.poetry]
name = "notifier"
version = "0.1.0"
description = "An example application using LISTEN/NOTIFY"
authors = ["Admin <admin@hellotractor.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
fastapi = "^0.60.1"
asyncpg = "^0.20.1"
click = "^7.1.2"
typer = "^0.3.1"
loguru = "^0.5.3"
rich = "^4.0.0"

[tool.poetry.dev-dependencies]
pdbpp = "^0.10.2"
ipykernel = "^5.3.4"
snoop = "^0.2.4"
hunter = "^3.1.3"

[tool.poetry.scripts]
notifier = "notifier.main:app"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
